fixed random quote bug where it would get stuck, also now only returns if starts with uppercase

--- a/src/App.scss
+++ b/src/App.scss
@@ -6,13 +6,6 @@ html {
   padding: 2rem 1rem;
 }
 
-.credits {
-  text-align: center;
-  color: rgb(54, 60, 63);
-  font-size: 0.8rem;
-}
-
-
 @media only screen and (min-width: 37.5em) {
   .body {
     padding: 3rem;
